# embedded-rhythm-game-controller

./: README.md
.github/workflows/: test.yml
case_blueprint/: entire.dxf  top-revised.dxf
circuit/: README.md  circuit.fzz
circuit/part/rectangle-red-led-button/: rectangle-red-led-button.fzpz
configurator/: README.md  pubspec.yaml
configurator/lib/: build_config.dart  globals.dart  main.dart
configurator/lib/classes/: key_config.dart  serial_descriptor.dart  serial_devices.dart
configurator/lib/components/: device_selector.dart  key_config_list.dart  key_config_list_item.dart
configurator/lib/const/: config.dart  keycode.dart  magic.dart
configurator/lib/l10n/: app_en.arb  (+1 more)
configurator/utils/: libserialport.sh  macos_dynlib.sh
configurator_legacy/.dart_tool/: package_config.json  package_config_subset
configurator_legacy/configurator/: README.md
controller/: .gitignore  README.md  button.h  button_config.cpp  button_config.h  config.h  const.h  controller.ino  default.h  flags.h  global.cpp  global.h  handlers.c  handlers.cpp  handlers.h  keyboard_handler.cpp  keyboard_handler.h  keymap.cpp  keymap.h  keymap.hpp  magic.h  pin.h  requirements  utils.cpp  utils.h
controller_research_communication/: controller_research_communication.ino
controller_research_eeprom/: controller_research_eeprom.ino
controller_test/: .gitignore  CMakeLists.txt  README.md  keymap_test.cc  utils_test.cc
controller_verify/: README.md  controller_verify.ino
controller_without_comm/: config.h  controller_without_comm.ino
fritzing/: README.md  controller.fzz
(+53 files in other folders)
